Fix for banner flickering on safari

--- a/src/app/news/game-news-list/game-news-list.component.css
+++ b/src/app/news/game-news-list/game-news-list.component.css
@@ -1,5 +1,6 @@
 :host {
     background-color: #303030;
+    z-index: -15;
 }
 
 .title-container {
